--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <h1 style= color:royalblue>Hello and welcome guys</h1>
     <h2 style= color:royalblue>Type a word in the box</h2>
+    <h3 style= color:royalblue>Type two words in the box</h3>
     <input type="text" id="str">
     <div id="output"></div>
     <button id="btn"><h2>Click to calculate word length</h2></button>
