--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="output"></div>
     <button id="btn"><h2>Click to calculate word length</h2></button>
     <script src="app.js"></script>
-    <h1 style= color:royalblue>Thanks for visiting</h1>
+    <h1 style= color:royalblue>Thanks for visiting!!!!</h1>
 </body>
     <hello>
 </html>
